# protoapp

./: .gitattributes  .gitignore  OpenCode.md  README.md  common.cfg.json  common.local.cfg.json  generate.go  go.mod  go.work  go.work.sum  protoapp.cfg.json  protoapp.local.cfg.json
.github/: labeler.yml
.github/workflows/: deno-ci.yml  rust-ci.yml  ts-ci.yml
adl/common/: capability.adl  hashing.adl  time.adl-go
adl/common/sql/: postgres.adl
adl/protoapp/apis/: cap.adl  ui.adl
adl/protoapp/config/: server.adl
deno/: code-gen.ts  gen-kysely-interface.ts  gen-rs-seaquery-schema.ts  gen-server-endpoint-interface.ts  gen-sqlschema.ts  gen-typescript-service.ts  genadl.ts  glob-files.ts  import-helper.ts  local-setup.ts
docs/: opencode.md
go/common/: go.mod  go.sum
go/common/common/capability/: capability.go  capability_ast.go  capability_fn.go
go/common/common/db/: db.go  db_ast.go  db_fn.go
go/common/common/hashing/: hashing.go  hashing_argon2.go  hashing_ast.go  hashing_bcrypt.go  hashing_fn.go
go/common/common/http/: http.go  http_ast.go  http_fn.go
go/common/common/strings/: strings.go  strings_ast.go
go/common/common/time/: time.go  time_ast.go  time_fn.go
go/common/common/ui/: ui.go  ui_ast.go
go/server/: .gitignore  cfg.json  go.mod  go.sum  main.go
go/server/internal/svr/: argon2id.go-  capr.go  hashing_test.go  jwt.go  server.go  svr_accesstoken.go  svr_public.go  svr_refresh.go
go/server/internal/types/: types.go
go/server/protoapp/db/: db.go  db_ast.go
go/server/protoapp/ui/: ui.go
platform/dev/: db.rc  docker-compose.yml
rust/: Cargo.toml  Makefile
rust/adl/: Cargo.toml
rust/adl/src/db/: conversions.rs  schema.rs
rust/processor/: Cargo.toml
rust/server/: Cargo.toml  env.local.json
rust/server/src/adl/: mod.rs
rust/server/src/server/: handlers.rs  jwt.rs  mod.rs  poem_adl_interop.rs  routing.rs
rust/server/src/server/db/: mod.rs
rust/server/src/server/tests/: helpers.rs  mod.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/shared/src/adl/: mod.rs
rust/shared/src/adl/custom/common/: db.rs  mod.rs  time.rs
ts/: .gitignore  pnpm-lock.yaml  pnpm-workspace.yaml
ts/adl/: package.json  tsconfig.json
ts/adl/src/: index.ts
ts/api-workbench/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
ts/api-workbench/src/: navigation.tsx
ts/api-workbench/src/pages/: api-workbench.tsx  landing.tsx  login.tsx  logout.tsx  messages.tsx
ts/api-workbench/src/utils/: loading-value.ts
ts/prettier-config/: index.json
ts/server/: .env  eslint.config.mjs  package.json  tsconfig.json
ts/server/src/: app.ts  server.ts
ts/server/src/adl-gen/: database.ts  endpoints.ts
ts/server/src/config/: app.ts  database.ts
ts/server/src/database/: adl-database.ts  (+2 more)
ts/server/test/: index.test.ts
ts/ui/: CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.workspace.ts
ts/ui/.storybook/: vitest.setup.ts
ts/ui/src/: App.tsx  main.tsx  navigation.tsx  theme.tsx
(+77 files in other folders)
