[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }