[package]
name = "protoapp"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
anyhow = "1.0.70"
argon2 = "0.5.2"
async-trait = "0.1.68"
base64 = { workspace = true }
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
http = "0.2.1"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
log = "0.4.17"
poem = { version = "3.1.5", features = ["session","cookie"] }
rand = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
test-log = { version = "0.2.16", features = []}
