[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "ADL generated code for the protoapp application"

[dependencies]
base64 = "0.21.2"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
sea-query = {version="0.28.5", features=["with-json","with-time"]}
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "time", "json"] }